k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spe-ingress
  namespace: spe-system-1
spec:
  ingressClassName: nginx
  rules:
    - host: spe.local
      http:
        paths:
          - path: /emergency
            pathType: Prefix
            backend:
              service:
                name: emergency-service
                port:
                  number: 8081

          - path: /dispatch
            pathType: Prefix
            backend:
              service:
                name: dispatch-service
                port:
                  number: 8082

          - path: /ambulance
            pathType: Prefix
            backend:
              service:
                name: ambulance-service
                port:
                  number: 8083
